# sbst-contest

./: .gitignore  pom.xml  runtool  sbst_logback.xml
papers/sbst21/: paper_sbst21.tex  papers.bib
papers/sbst22/: paper_sbst22.tex  papers.bib
papers/sbst22/data/: macros.tex  main.py  problematic-classes.txt  results.csv  utils.py
papers/sbst23/: paper_sbst23.tex  papers.bib
papers/sbst23/data/: classes-no-tests-generated.txt  human-study.csv  macros.tex  main.py  pyproject.toml  results.csv  understandability.py  utils.py
plots/: create_coverage_boxplot.py
src/evo/sbst/runtool/: SBSTChannel_ESTest.java  SBSTChannel_ESTest_scaffolding.java
src/main/java/sbst/runtool/: EvoSuiteTestingTool.java
