[tool.poetry]
name = "evosuite-sbst23-data"
version = "0.1.0"
description = ""
authors = ["Sebastian Schweikl <schweikl@fim.uni-passau.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
